fix: scope management report definitions by key instead of replacing with tenant-less frontend defs
When a process scope is selected in the Agentic Control Plane dashboard, the
frontend sends definitions without tenantIds (defaulting to [null]). Replacing
the already-resolved management definitions with these bare objects caused a
tenant mismatch in the ES query, returning 0 results.

Instead, filter the management-resolved definitions (which have correct tenant IDs)
to only include those matching the requested scope key. This preserves the
correct tenant resolution while scoping the report to a single process.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>